--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -34,8 +34,8 @@ goal_radius: 0.15    #(m) Drone has arrived to the goal when distance_to_goal<GO
 drone_radius: 0.25  #(m) Used for collision checking # not used anymore replaced by drone_bbox
 drone_bbox: [0.9, 0.9, 1.5] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
 
-
 Ra: 8.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
+obs_Ra: 20.0      # make is big so that others can hear it early
 
 #x_min: -1000000000.0  # [m] don't forget the .0
 #x_max: 10000000000.0  # [m] don't forget the .0
@@ -56,10 +56,15 @@ y_max: 4.1   # [m] don't forget the .0
 z_min: 0.9  # [m] don't forget the .0
 z_max: 3.0  # [m] don't forget the .0
 
-#For single-agent simulations
+#For agents
 v_max: [4.0, 4.0, 4.0]   #[m/s]  7.0
 a_max: [5.0, 5.0, 5.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
 j_max: [6.0, 6.0, 6.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
+
+#For obstacles
+obs_v_max: [1.0, 1.0, 1.0]   #[m/s]  7.0
+obs_a_max: [2.0, 2.0, 2.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
+obs_j_max: [3.0, 3.0, 3.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
 factor_alpha: 1.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 
