--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -5,10 +5,10 @@ sim: true
 is_take_off: false
 
 # using centralized or decentralized trajs?
-is_centralized: true
+is_centralized: false
 
 # use delay check or not?
-######is_delaycheck: true
+#######is_delaycheck: true
 
 # max number of agents (not the actual number. it's max number of id)
 max_agent_number: 10
@@ -22,7 +22,7 @@ n_agents: 10
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.15    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
 drone_radius: 0.25  #(m) Used for collision checking # not used anymore replaced by drone_bbox
-drone_bbox: [0.5, 0.5, 0.5] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
+drone_bbox: [0.4, 0.4, 0.4] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
 
 #w_max: 0.4           # [rd/s] Maximum angular velocity. 0.4 for Hardware
 w_max: 0.0
@@ -31,8 +31,8 @@ alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> Mo
 
 Ra: 30.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
-######delay_check: 0.05 # seconds
-#########################################################################################################################simulated_comm_delay: 0.0 #seconds
+#######delay_check: 0.05 # seconds
+############################################################################################################################################################simulated_comm_delay: 0.0 #seconds
 comm_delay_param: 1.0
 
 x_min: -1000000000.0  # [m] don't forget the .0
