update on how to compute total time

--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -1,5 +1,5 @@
 use_ff: true # use feedforward
-###visual: true #publish visualization stuff
+visual: true #publish visualization stuff
 color_type: "vel" #"vel" or "plain"
 n_agents: 16 #only used for the color in the trajectory
 
@@ -12,7 +12,7 @@ w_max: 2.5
 
 alpha_filter_dyaw: 0 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
-Ra: 4.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
+Ra: 20.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
 x_min: -1000000000.0  # [m] don't forget the .0
 x_max: 10000000000.0  # [m] don't forget the .0
@@ -28,7 +28,7 @@ z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes high
 # a_max: [30.0, 30.0, 9.6]   #[m/s2] 
 
 #For single-agent simulations
-v_max: [3.5, 3.5, 3.5]   #[m/s]  7.0
+v_max: [10.0, 10.0, 10.0]   #[m/s]  7.0
 a_max: [20.0, 20.0, 9.6]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
 j_max: [30.0, 30.0, 30.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
@@ -37,7 +37,7 @@ factor_alpha: 1.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 #Parameters for NLOPT
 num_pol: 4
 deg_pol: 3 #Only 3 is supported right now
-weight: 1000.0 #The .0 is needed 
+weight: 10.0 #The .0 is needed 
 epsilon_tol_constraints: 0.000001
 xtol_rel: 0.0000000000001 #negative value --> stopping criterion not used
 ftol_rel: 0.0000000001 #negative value --> stopping criterion not used
@@ -49,7 +49,7 @@ solver: "LD_MMA"
 # LD_TNEWTON_RESTART, LD_TNEWTON_PRECOND, LD_VAR1, LD_LBFGS_NOCEDAL, COBYLA
 
 # kappa + mu <=1 Ideally kappa + mu<1 (so that there is time for other stuff)
-upper_bound_runtime_snlopt: 0.35 #[seconds] snlopt (init guess + solver) will never take longer than this amount of seconds
+upper_bound_runtime_snlopt: 0.90 #[seconds] snlopt (init guess + solver) will never take longer than this amount of seconds
 lower_bound_runtime_snlopt: 0.05 #[seconds] snlopt (init guess + solver) will never take less than this amount of seconds
 kappa: 0.4 #% of time spent to find initial guess
 mu: 0.4    #% of time spent to solve the optimization
@@ -61,9 +61,9 @@ a_star_samp_z: 5
 a_star_fraction_voxel_size: 0.5 #\in [0,1] The higher, the bigger the voxel size in A* is(i.e. more prunning)
 allow_infeasible_guess: true  #whether allow infeasible guesses to be used for the optimization. If false, straight line guess will be used in the case of an infeasible guess
 
-a_star_bias: 1.0 #Bias (cost=g+bias*h) in the A* search 
+a_star_bias: 0.0 #Bias (cost=g+bias*h) in the A* search 
 
-###basis: "MINVO"  #MINVO OR B_SPLINE or BEZIER.  This is the basis used for collision checking
+basis: "MINVO"  #MINVO OR B_SPLINE or BEZIER.  This is the basis used for collision checking
 
 res_plot_traj: 15.0  #Higher --> More resolution when plotting the trajectory 
 
