--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -20,6 +20,10 @@ is_camera_yawing: false
 camera1: "05"
 camera2: "07"
 
+# who's the obstacle?
+obstacle1: "08"
+obstacle2: "20"
+
 w_max: 0.6           # [rd/s] Maximum angular velocity. 0.4 for Hardware
 alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
@@ -35,6 +39,7 @@ drone_radius: 0.25  #(m) Used for collision checking # not used anymore replaced
 drone_bbox: [0.8, 0.8, 1.0] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
 
 Ra: 10.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
+obs_Ra: 20.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
 delay_check: 0.15 # seconds
 simulated_comm_delay: 0.0 #seconds
@@ -68,6 +73,11 @@ z_max: 3.0  # [m] don't forget the .0
 v_max: [2.0, 2.0, 2.0]   #[m/s]  7.0
 a_max: [3.0, 3.0, 3.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
 j_max: [4.0, 4.0, 4.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
+
+#For obstacles
+obs_v_max: [1.0, 1.0, 1.0]   #[m/s]  7.0
+obs_a_max: [2.0, 2.0, 2.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
+obs_j_max: [3.0, 3.0, 3.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
 factor_alpha: 2.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 
