--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -9,7 +9,7 @@ is_centralized: false
 
 # use delay check or not?
 
-###########is_delaycheck: true
+##############is_delaycheck: true
 
 # max number of agents (not the actual number. it's max number of id)
 max_agent_number: 10
@@ -38,8 +38,8 @@ drone_bbox: [0.25, 0.25, 0.25] #(m) Used for collision checking replacing drone_
 
 Ra: 30.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
-###########delay_check: 0.05 # seconds
-##################################################################################################simulated_comm_delay: 0.0 #seconds
+##############delay_check: 0.05 # seconds
+######################################################################################################simulated_comm_delay: 0.0 #seconds
 comm_delay_param: 1.0
 
 x_min: -1000000000.0  # [m] don't forget the .0
