--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -5,7 +5,7 @@ sim: true
 is_take_off: false
 
 # using centralized or decentralized trajs?
-is_centralized: false
+is_centralized: true
 
 # use delay check or not?
 
@@ -39,7 +39,7 @@ drone_bbox: [0.25, 0.25, 0.25] #(m) Used for collision checking replacing drone_
 Ra: 30.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
 ##############delay_check: 0.05 # seconds
-######################################################################################################simulated_comm_delay: 0.0 #seconds
+#######################################################################################################simulated_comm_delay: 0.0 #seconds
 comm_delay_param: 1.0
 
 x_min: -1000000000.0  # [m] don't forget the .0
