--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -5,7 +5,7 @@ sim: false
 is_take_off: true
 
 # using centralized or decentralized trajs?
-is_centralized: true 
+is_centralized: false 
 
 # use delay check or not?
 is_delaycheck: true
@@ -17,8 +17,8 @@ max_agent_number: 10
 is_camera_yawing: false
 
 # who's the camera man? (if you are camera man is_camera_yawing will be true in mader_ros.cpp)
-camera1: "20"
-camera2: "20"
+camera1: "05"
+camera2: "06"
 
 # who's the obstacle?
 obstacle1: "20"
@@ -36,7 +36,7 @@ n_agents: 10
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.05    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
 drone_radius: 0.25  #(m) Used for collision checking # not used anymore replaced by drone_bbox
-drone_bbox: [1.0, 1.0, 1.5] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
+drone_bbox: [0.8, 0.8, 1.0] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
 
 Ra: 10.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 obs_Ra: 20.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
