add gazebo_msgs for docker

--- a/mader/package.xml
+++ b/mader/package.xml
@@ -22,6 +22,7 @@
 
   <build_depend>snapstack_msgs</build_depend>
   <build_depend>mader_msgs</build_depend>
+  <build_depend>gazebo_msgs</build_depend>
   <build_depend>rviz_visual_tools</build_depend>
   <build_depend>decomp_util</build_depend>
   <build_depend>decomp_ros_utils</build_depend>
